subprojects/swen430/src/test/resources/tests/invalid/Typing_Invalid_12.while
type rael is real

int f(rael x) {
    return x;
}